[metadata]
name = GameserverLister
version = 1.0.7
description = Python command line tool to retrieve game server lists for various games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetteup/GameserverLister
project_urls =
    Bug Tracker = https://github.com/cetteup/GameserverLister/issues
author = cetteup
author_email = me@cetteup.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment
    Topic :: Internet

[options]
packages = find:
python_requires = >=3.8, <3.12
install_requires =
    gevent==22.10.2
    nslookup==1.7.0
    requests[socks]==2.28.2
    pyq3serverlist==0.3.2
    pyut2serverlist==0.2.0
    pyvpsq==0.1.2
    click==8.1.3

[options.packages.find]
include =
    GameserverLister
    GameserverLister.*

[options.entry_points]
console_scripts =
    gameserverlister = GameserverLister.__main__:cli
