[metadata]
name = GameserverLister
version = 2.2.1
description = Python command line tool to retrieve game server lists for various games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetteup/GameserverLister
project_urls =
    Bug Tracker = https://github.com/cetteup/GameserverLister/issues
author = cetteup
author_email = me@cetteup.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Games/Entertainment
    Topic :: Internet

[options]
packages = find:
python_requires = >=3.10
install_requires =
    gevent==25.9.1
    nslookup==1.8.1
    requests[socks]==2.32.5
    pyq3serverlist==0.4.0
    pyut2serverlist==0.2.0
    pyvpsq==0.2.1
    click==8.3.1

[options.packages.find]
include =
    GameserverLister
    GameserverLister.*

[options.entry_points]
console_scripts =
    gameserverlister = GameserverLister.__main__:cli
